[package]
name = "rsj"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4"
rustyline = "9.0"
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
argh = "0.1.6"

[dev-dependencies]
pretty_assertions = "1.0"
