[package]
name = "rsj"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.6"
assert_cmd = "2.0.2"
num-complex = "0.4"
predicates = "2.1"
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
rustyline = "9.0"
similar = "2.0"
tempfile = "3.2.0"

[dev-dependencies]
pretty_assertions = "1.0"
