[package]
name = "rsj"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
assert_cmd = "2.0.2"
ndarray = "0.15"
num-complex = "0.4"
predicates = "2.1"
rustyline = "9"
similar = "2.0"
tempfile = "3.2.0"

[dependencies.pulldown-cmark]
default-features = false
features = ["simd"]
version = "0.9"

[dev-dependencies]
insta = "1.9"
pretty_assertions = "1.0"
proptest = "1.0"
